--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .red {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="main-header"<
+    <h1 id="main-header">Main Header</h1>
     <script src="main.js"></script>
 
 </body>
